Extend rooms api (#15)
* Extend rooms API

Co-authored-by: Karissa Jacobsen <karissa.jacobsen@docusign.com>

--- a/views/pages/index_rooms_examples.ejs
+++ b/views/pages/index_rooms_examples.ejs
@@ -58,3 +58,37 @@
    <a target='_blank'
       href="https://developers.docusign.com/rooms-api/reference/Rooms/Rooms/GetDocuments">Rooms::GetDocuments</a>.
 </p>
+
+<h4 id="example007">7. <a href="eg007rooms">Creating a form group</a></h4>
+<p>
+    This example demonstrates how to create a form group.
+</p>
+<p>
+    API methods used:
+    <a target ='_blank'
+       href="https://developers.docusign.com/docs/rooms-api/how-to/create-form-group/">
+        Rooms::CreateFormGroup
+    </a>
+</p>
+
+<h4 id="example008">8. <a href="eg008rooms">Grant office access to a form group</a></h4>
+<p>
+    This example demonstrates how to grant office access to a form group.
+</p>
+<p>
+    API methods used:
+    <a target ='_blank' href="https://developers.docusign.com/docs/rooms-api/how-to/access-form-group/">Rooms::AccessFormGroup</a>,
+    <a target ='_blank' href="https://developers.docusign.com/docs/rooms-api/reference/forms/formgroups/getformgroups/">FormGroups::GetFormGroups</a> and
+    <a target ='_blank' href="https://developers.docusign.com/docs/rooms-api/reference/offices/offices/getoffices/">Offices::GetOffices</a>
+</p>
+
+<h4 id="example009">9. <a href="eg009rooms">Assign form to a form group</a></h4>
+<p>
+    This example demonstrates how to assign form to a form group.
+</p>
+<p>
+    API methods used:
+    <a target ='_blank' href="https://developers.docusign.com/docs/rooms-api/how-to/assign-form-group/">Rooms::AssignFormGroup</a>,
+    <a target ='_blank' href="https://developers.docusign.com/docs/rooms-api/reference/forms/formgroups/getformgroups/">FormGroups::GetFormGroups</a> and
+    <a target ='_blank' href="https://developers.docusign.com/docs/rooms-api/reference/forms/formlibraries/getformlibraries/">FormLibraries:GetFormLibraries</a>
+</p>
