--- a/views/pages/rooms-examples/eg003ExportDataFromRoom.ejs
+++ b/views/pages/rooms-examples/eg003ExportDataFromRoom.ejs
@@ -9,7 +9,7 @@
   <a target ='_blank' href="https://developers.docusign.com/rooms-api/reference/Rooms/Rooms/GetRoomFieldData">Rooms::GetRoomFieldData</a>.
 </p>
 <% include ../../partials/gitSource %>
-<% if (rooms) { %>
+<% if (rooms && rooms.length > 0) { %>
 <form class="eg" action="" method="post" data-busy="form">
   
   <div class="form-group">
