--- a/views/pages/rooms-examples/eg004AddingFormToRoom.ejs
+++ b/views/pages/rooms-examples/eg004AddingFormToRoom.ejs
@@ -11,7 +11,7 @@
     <a target='_blank' href="https://developers.docusign.com/rooms-api/reference/Rooms/Rooms/AddFormToRoom">Rooms: AddFormToRoom</a>.
 </p>
 <% include ../../partials/gitSource %>
-<% if (rooms) { %>
+<% if (rooms && rooms.length > 0) { %>
 <form class="eg" action="" method="post" data-busy="form">
   <div class="form-group">
     <label for="roomId">Room</label>
