--- a/views/pages/rooms-examples/eg006CreateExternalFormFillSession.ejs
+++ b/views/pages/rooms-examples/eg006CreateExternalFormFillSession.ejs
@@ -11,7 +11,7 @@
   <a target ='_blank' href="https://developers.docusign.com/rooms-api/reference/Rooms/ExternalFormFillSessions/CreateExternalFormFillSession">ExternalFormFillSessions::CreateExternalFormFillSession</a>
 </p>
 <% include ../../partials/gitSource %>
-<% if (documents) { %>
+<% if (documents && documents.length > 0) { %>
 <form class="eg" action="" method="post" data-busy="form">
   <div class="form-group">
     <label for="docuSignFormId">Forms</label>
@@ -25,5 +25,11 @@
   <input type="hidden" name="roomId" value="<%- roomId %>">
   <button type="submit" class="btn btn-docu">Submit</button>
 </form>
+<% } else { %>
+  <p>Problem: Selected room does not have any documents. Please first add a form to a room using  <a href="eg004rooms">example 4</a></a> <br/>
+   Thank you.</p>
+   <form class="eg" action="eg004rooms" method="get">
+    <button type="submit" class="btn btn-docu">Continue</button>
+  </form>
 <% } %>
 <% include ../../partials/examplesFoot.ejs %>
