Added first example

--- a/views/pages/index_examples.ejs
+++ b/views/pages/index_examples.ejs
@@ -2,6 +2,8 @@
     <% include index_rooms_examples %>
 <% } else if(locals.dsConfig.examplesApi.isClickApi) { %>
     <% include index_click_examples %>
+<% } else if(locals.dsConfig.examplesApi.isMonitorApi) { %>
+    <% include index_monitor_examples %>
 <% } else { %>
     <% include index_esignature_examples %>
 <% } %>
