--- a/views/pages/monitor-examples/eg001GetMonitoringData.ejs
+++ b/views/pages/monitor-examples/eg001GetMonitoringData.ejs
@@ -16,7 +16,7 @@
 <% include ../../partials/gitSource %>
 <form class="eg" action="" method="post" data-busy="form">
   <input type="hidden" name="_csrf" value="<%- csrfToken %>">
-  <button type="submit" class="btn btn-docu">Submit</button>
+  <button type="submit" class="btn btn-docu">Continue</button>
 </form>
 
 <% include ../../partials/examplesFoot %>
