Fixing endpoint name

--- a/views/pages/monitor-examples/eg001GetMonitoringData.ejs
+++ b/views/pages/monitor-examples/eg001GetMonitoringData.ejs
@@ -10,7 +10,7 @@
 <% include ../../partials/docBody %>
 
 <p>API method used:
-  <a target='_blank' href="https://developers.docusign.com/docs/monitor-api/reference/monitor/dataset/getstreamfordataset/">Monitor::GetStreamForDataset</a>.
+  <a target='_blank' href="https://developers.docusign.com/docs/monitor-api/reference/monitor/dataset/getstreamfordataset/">DataSet::GetStreamForDataset</a>.
 </p>
 
 <% include ../../partials/gitSource %>
