Updates for Monitor API code example

--- a/views/pages/monitor-examples/eg001GetMonitoringData.ejs
+++ b/views/pages/monitor-examples/eg001GetMonitoringData.ejs
@@ -10,13 +10,13 @@
 <% include ../../partials/docBody %>
 
 <p>API method used:
-  <a target='_blank' href="https://developers.docusign.com/docs/monitor-api/reference/monitor/dataset/getstreamfordataset/">Monitor::GetStreamForDataset</a>.
+  <a target='_blank' href="https://developers.docusign.com/docs/monitor-api/reference/monitor/dataset/getstreamfordataset/">DataSet::GetStreamForDataset</a>.
 </p>
 
 <% include ../../partials/gitSource %>
 <form class="eg" action="" method="post" data-busy="form">
   <input type="hidden" name="_csrf" value="<%- csrfToken %>">
-  <button type="submit" class="btn btn-docu">Submit</button>
+  <button type="submit" class="btn btn-docu">Continue</button>
 </form>
 
 <% include ../../partials/examplesFoot %>
