update monitor and standardize text (#22)
* update monitor and standardize text

--- a/views/pages/index_rooms_examples.ejs
+++ b/views/pages/index_rooms_examples.ejs
@@ -1,3 +1,6 @@
+<h2>Welcome</h2>
+  <p>This launcher includes the following examples for the DocuSign Rooms API.</p>
+
 <% if (showDoc) { %>
 <p><a target='_blank' href='<%= documentation %>'>Documentation</a> on using OAuth Authorization Code Grant and JWT from
    a Node Express application.</p>
