--- a/views/pages/monitor-examples/eg001GetMonitoringData.ejs
+++ b/views/pages/monitor-examples/eg001GetMonitoringData.ejs
@@ -3,8 +3,7 @@
 <h4>1. Get monitoring data</h4>
 
 <p>
-  This example demonstrates how to get and display 
-  all of your organization’s monitoring data.
+  Demonstrates how to get and display all of your organization’s monitoring data.
 </p>
 
 <% include ../../partials/docBody %>
