--- a/views/pages/index_click_examples.ejs
+++ b/views/pages/index_click_examples.ejs
@@ -1,3 +1,6 @@
+<h2>Welcome</h2>
+  <p>This launcher includes the following examples for the DocuSign Click API.</p>
+
 <% if (showDoc) { %>
     <p><a target='_blank' href='<%= documentation %>'>Documentation</a> on using OAuth Authorization Code Grant and JWT
         from
