--- a/views/pages/index_monitor_examples.ejs
+++ b/views/pages/index_monitor_examples.ejs
@@ -45,7 +45,7 @@
 <p>
     API method used:
     <a target='_blank'
-       href="https://developers.docusign.com/docs/monitor-api/reference/monitor/dataset/getstream/">Monitor::GetStream</a>
+       href="https://developers.docusign.com/docs/monitor-api/reference/monitor/dataset/getstream/">DataSet::getStream</a>
 </p>
 </div>
 
