Updating links to DevCenter

--- a/views/pages/examples/eg002SigningViaEmail.ejs
+++ b/views/pages/examples/eg002SigningViaEmail.ejs
@@ -2,7 +2,7 @@
 
 <h4>2. Send an envelope with a remote (email) signer and cc recipient</h4>
 <p>The envelope includes a pdf, Word, and HTML document. Anchor text 
-  (<a href="https://support.docusign.com/en/guides/AutoPlace-New-DocuSign-Experience">AutoPlace</a>)
+  (<a href="https://developers.docusign.com/docs/esign-rest-api/esign101/concepts/tabs/auto-place/">AutoPlace</a>)
   is used to position the signing fields in the documents.
 </p>
 <p>This is a general example of creating and sending an envelope (a signing request) to multiple recipients,
@@ -11,7 +11,7 @@
   <% include ../../partials/docBody %>
   
   <p>API method used: 
-   <a target='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/Envelopes/create">Envelopes::create</a>.
+   <a target='_blank' href="https://developers.docusign.com/docs/esign-rest-api/reference/envelopes/envelopes/create/">Envelopes::create</a>.
 </p>
 
 <% include ../../partials/gitSource %>
