--- a/views/pages/examples/eg020SmsAuthentication.ejs
+++ b/views/pages/examples/eg020SmsAuthentication.ejs
@@ -2,7 +2,7 @@
 
 <h4>20. Send an envelope with recipient SMS authentication.</h4>
 <p>Anchor text 
-  (<a href="https://support.docusign.com/en/guides/AutoPlace-New-DocuSign-Experience">AutoPlace</a>)
+  (<a href="https://developers.docusign.com/docs/esign-rest-api/esign101/concepts/tabs/auto-place/">AutoPlace</a>)
   is used to position the signing fields in the documents.
 </p>
 <p>This is an example of an envelope utilizing SMS authentication for multi-factor verification of a recipient.</p>
@@ -10,7 +10,7 @@
 <% include ../../partials/docBody %>
   
   <p>API method used: 
-   <a target='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/Envelopes/create">Envelopes::create</a>.
+   <a target='_blank' href="https://developers.docusign.com/docs/esign-rest-api/reference/envelopes/envelopes/create/">Envelopes::create</a>.
 </p>
 
 
