--- a/views/pages/examples/eg022KbaAuthentication.ejs
+++ b/views/pages/examples/eg022KbaAuthentication.ejs
@@ -2,7 +2,7 @@
 <h4>22. Requiring Knowledge Based Authentication (KBA) for a Recipient</h4>
 <p>
     The envelope includes a pdf document. Anchor text
-    (<a href="https://support.docusign.com/en/guides/AutoPlace-New-DocuSign-Experience">AutoPlace</a>)
+    (<a href="https://developers.docusign.com/docs/esign-rest-api/esign101/concepts/tabs/auto-place/">AutoPlace</a>)
     is used to position the signing fields in the documents.
 </p>
 <p>
@@ -12,7 +12,7 @@
 <% include ../../partials/docBody %>
 
 <p>API method used: 
- <a target='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/Envelopes/create">Envelopes::create</a>.
+ <a target='_blank' href="https://developers.docusign.com/docs/esign-rest-api/reference/envelopes/envelopes/create/">Envelopes::create</a>.
 </p>
 
 
