--- a/views/pages/examples/eg011EmbeddedSending.ejs
+++ b/views/pages/examples/eg011EmbeddedSending.ejs
@@ -4,7 +4,7 @@
 <p>An envelope will be created in draft mode. Your browser will then be redirected to 
    the DocuSign web tool where the envelope can be (optionally) updated and then sent.</p>
 <p>The envelope includes a pdf, Word, and HTML document. Anchor text 
-      (<a href="https://support.docusign.com/en/guides/AutoPlace-New-DocuSign-Experience">AutoPlace</a>)
+      (<a href="https://developers.docusign.com/docs/esign-rest-api/esign101/concepts/tabs/auto-place/">AutoPlace</a>)
       is used to position the signing fields in the documents.</p>
 <p>DocuSign recommends that you enhance your application as needed to avoid the need 
     for the embedded sender view.
@@ -17,8 +17,8 @@
 <% include ../../partials/docBody %>
 
 <p>API methods used:
-   <a target='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/Envelopes/create">Envelopes::create</a> and
-   <a target='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/EnvelopeViews/createSender">EnvelopeViews::createSender</a>.
+   <a target='_blank' href="https://developers.docusign.com/docs/esign-rest-api/reference/envelopes/envelopes/create/">Envelopes::create</a> and
+   <a target='_blank' href="https://developers.docusign.com/docs/esign-rest-api/reference/envelopes/envelopeviews/createsender/">EnvelopeViews::createSender</a>.
 </p>
 
 <% include ../../partials/gitSource %>
