--- a/views/pages/examples/eg013AddDocToTemplate.ejs
+++ b/views/pages/examples/eg013AddDocToTemplate.ejs
@@ -6,7 +6,7 @@
   <p>This example sends an envelope based on a template.</p>
   <p>In addition to the template's document(s), the example adds an
     additional document to the envelope by using the 
-    <a target='_blank' href='https://developers.docusign.com/esign-rest-api/guides/features/templates#composite-templates'>Composite Templates</a>
+    <a target='_blank' href='https://developers.docusign.com/docs/esign-rest-api/esign101/concepts/templates/composite/'>Composite Templates</a>
     feature.</p>
   <p>In this example, the additional document is an HTML document that 
     includes order details with information from the form below.</p>
@@ -19,8 +19,8 @@
 <% include ../../partials/docBody %>
 
 <p>API methods used: 
-   <a target ='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/Envelopes/create">Envelopes::create</a> and 
-   <a target ='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/EnvelopeViews/createRecipient">EnvelopeViews::createRecipient</a>.
+   <a target ='_blank' href="https://developers.docusign.com/docs/esign-rest-api/reference/envelopes/envelopes/create/">Envelopes::create</a> and 
+   <a target ='_blank' href="https://developers.docusign.com/docs/esign-rest-api/reference/envelopes/envelopeviews/createrecipient/">EnvelopeViews::createRecipient</a>.
 </p>
 <% include ../../partials/gitSource %>
 <% if (templateOk) { %>
