--- a/views/pages/examples/eg021PhoneAuthentication.ejs
+++ b/views/pages/examples/eg021PhoneAuthentication.ejs
@@ -3,7 +3,7 @@
 <h4>21. Requiring an Phone Authentication for a Recipient</h4>
 <p>
     The envelope includes a pdf document. Anchor text
-    (<a href="https://support.docusign.com/en/guides/AutoPlace-New-DocuSign-Experience">AutoPlace</a>)
+    (<a href="https://developers.docusign.com/docs/esign-rest-api/esign101/concepts/tabs/auto-place/">AutoPlace</a>)
     is used to position the signing fields in the documents.
 </p>
 <p>
@@ -15,7 +15,7 @@
 
 <p>
   API method used:
-  <a target='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/Envelopes/create">Envelopes::create</a>.
+  <a target='_blank' href="https://developers.docusign.com/docs/esign-rest-api/reference/envelopes/envelopes/create/">Envelopes::create</a>.
 </p>
 
 
