--- a/views/pages/examples/eg029ApplyBrandToEnvelope.ejs
+++ b/views/pages/examples/eg029ApplyBrandToEnvelope.ejs
@@ -4,7 +4,7 @@
 
 <p>
     The envelope includes a pdf document. Anchor text
-    (<a href="https://support.docusign.com/en/guides/AutoPlace-New-DocuSign-Experience">AutoPlace</a>)
+    (<a href="https://developers.docusign.com/docs/esign-rest-api/esign101/concepts/tabs/auto-place/">AutoPlace</a>)
     is used to position the signing fields in the documents.
 </p>
 <p>
@@ -14,7 +14,7 @@
 <% include ../../partials/docBody %>
 
   <p>API method used:
-   <a target='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/Envelopes/create">Envelopes::create</a>.
+   <a target='_blank' href="https://developers.docusign.com/docs/esign-rest-api/reference/envelopes/envelopes/create/">Envelopes::create</a>.
 </p>
 
 <% include ../../partials/gitSource %>
