--- a/views/pages/index_esignature_examples.ejs
+++ b/views/pages/index_esignature_examples.ejs
@@ -17,20 +17,20 @@
     With embedded signing, DocuSign signing is initiated from your website.
 </p>
 <p>API methods used:
-    <a target='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/Envelopes/create">Envelopes::create</a>
+    <a target='_blank' href="https://developers.docusign.com/docs/esign-rest-api/reference/envelopes/envelopes/create/">Envelopes::create</a>
     and
     <a target='_blank'
-       href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/EnvelopeViews/createRecipient">EnvelopeViews::createRecipient</a>.
+       href="https://developers.docusign.com/docs/esign-rest-api/reference/envelopes/envelopeviews/createrecipient/">EnvelopeViews::createRecipient</a>.
 </p>
 
 <h4 id="example002">2. <a href="eg002">Send an envelope with a remote (email) signer and cc recipient</a></h4>
 <p>The envelope includes a pdf, Word, and HTML document. Anchor text
     (<a target='_blank'
-        href="https://support.docusign.com/en/guides/AutoPlace-New-DocuSign-Experience">AutoPlace</a>)
+        href="https://developers.docusign.com/docs/esign-rest-api/esign101/concepts/tabs/auto-place/">AutoPlace</a>)
     is used to position the signing fields in the documents.
 </p>
 <p>API method used:
-    <a target='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/Envelopes/create">Envelopes::create</a>.
+    <a target='_blank' href="https://developers.docusign.com/docs/esign-rest-api/reference/envelopes/envelopes/create/">Envelopes::create</a>.
 </p>
 
 <h4 id="example003">3. <a href="eg003">List envelopes in the user's account</a></h4>
@@ -38,7 +38,7 @@
 </p>
 <p>API method used:
     <a target='_blank'
-       href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/Envelopes/listStatusChanges">Envelopes::listStatusChanges</a>.
+       href="https://developers.docusign.com/docs/esign-rest-api/reference/envelopes/envelopes/liststatuschanges/">Envelopes::listStatusChanges</a>.
 </p>
 
 <h4 id="example004">4. <a href="eg004">Get an envelope's basic information and status</a></h4>
@@ -47,7 +47,7 @@
     envelope, its documents, recipients, etc.
 </p>
 <p>API method used:
-    <a target='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/Envelopes/get">Envelopes::get</a>.
+    <a target='_blank' href="https://developers.docusign.com/docs/esign-rest-api/reference/envelopes/envelopes/get/">Envelopes::get</a>.
 </p>
 
 <h4 id="example005">5. <a href="eg005">List an envelope's recipients and their status</a></h4>
@@ -55,7 +55,7 @@
 </p>
 <p>API method used:
     <a target='_blank'
-       href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/EnvelopeRecipients/list">EnvelopeRecipients::list</a>.
+       href="https://developers.docusign.com/docs/esign-rest-api/reference/envelopes/enveloperecipients/list/">EnvelopeRecipients::list</a>.
 </p>
 
 <h4 id="example006">6. <a href="eg006">List an envelope's documents</a></h4>
@@ -64,7 +64,7 @@
 </p>
 <p>API method used:
     <a target='_blank'
-       href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/EnvelopeDocuments/list">EnvelopeDocuments::list</a>.
+       href="https://developers.docusign.com/docs/esign-rest-api/reference/envelopes/envelopedocuments/list/">EnvelopeDocuments::list</a>.
 </p>
 
 <h4 id="example007">7. <a href="eg007">Download a document from an envelope</a></h4>
@@ -72,21 +72,21 @@
 </p>
 <p>API method used:
     <a target='_blank'
-       href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/EnvelopeDocuments/get">EnvelopeDocuments::get</a>.
+       href="https://developers.docusign.com/docs/esign-rest-api/reference/envelopes/envelopedocuments/get/">EnvelopeDocuments::get</a>.
 </p>
 
 <h4 id="example008">8. <a href="eg008">Create a template</a></h4>
 <p>Create a template with two roles, <b>signer</b> and <b>cc</b>.</p>
 <p>API methods used:
-    <a target='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Templates/Templates/list">Templates::list</a>,
-    <a target='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Templates/Templates/create">Templates::create</a>.
+    <a target='_blank' href="https://developers.docusign.com/docs/esign-rest-api/reference/templates/templates/list/">Templates::list</a>,
+    <a target='_blank' href="https://developers.docusign.com/docs/esign-rest-api/reference/templates/templates/create/">Templates::create</a>.
 </p>
 
 <h4 id="example009">9. <a href="eg009">Send an envelope using a template</a></h4>
 <p>The envelope is defined by the template.
     The signer and cc recipient name and email are used to fill in the template's <i>roles</i>.</p>
 <p>API method used:
-    <a target='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/Envelopes/create">Envelopes::create</a>.
+    <a target='_blank' href="https://developers.docusign.com/docs/esign-rest-api/reference/envelopes/envelopes/create/">Envelopes::create</a>.
 </p>
 
 <h4 id="example010">10. <a href="eg010">Send an envelope using binary document transfer</a></h4>
@@ -96,7 +96,7 @@
     Binary transfer is not yet supported by the SDK.
 </p>
 <p>API method used:
-    <a target='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/Envelopes/create">Envelopes::create</a>.
+    <a target='_blank' href="https://developers.docusign.com/docs/esign-rest-api/reference/envelopes/envelopes/create/">Envelopes::create</a>.
 </p>
 
 <h4 id="example011">11. <a href="eg011">Use embedded sending</a></h4>
@@ -105,15 +105,15 @@
     to the envelope before it is sent.
 </p>
 <p>API methods used:
-    <a target='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/Envelopes/create">Envelopes::create</a>,
+    <a target='_blank' href="https://developers.docusign.com/docs/esign-rest-api/reference/envelopes/envelopes/create/">Envelopes::create</a>,
     <a target='_blank'
-       href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/EnvelopeViews/createSender">EnvelopeViews::createSender</a>.
+       href="https://developers.docusign.com/docs/esign-rest-api/reference/envelopes/envelopeviews/createsender/">EnvelopeViews::createSender</a>.
 
 <h4 id="example012">12. <a href="eg012">Embedded DocuSign web tool</a></h4>
 <p>Redirect the user to the DocuSign web tool.</p>
 <p>API method used:
     <a target='_blank'
-       href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/EnvelopeViews/createConsole">EnvelopeViews::createConsole</a>.
+       href="https://developers.docusign.com/docs/esign-rest-api/reference/envelopes/envelopeviews/createconsole/">EnvelopeViews::createConsole</a>.
 </p>
 
 <h4 id="example013">13. <a href="eg013">Use embedded signing from a template with an added document</a></h4>
@@ -121,78 +121,78 @@
 <p>In addition to the template's document(s), the example adds an
     additional document to the envelope by using the
     <a target='_blank'
-       href='https://developers.docusign.com/esign-rest-api/guides/features/templates#composite-templates'>Composite
+       href='https://developers.docusign.com/docs/esign-rest-api/esign101/concepts/templates/composite/'>Composite
         Templates</a>
     feature.</p>
 <p>API methods used:
-    <a target='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/Envelopes/create">Envelopes::create</a>
+    <a target='_blank' href="https://developers.docusign.com/docs/esign-rest-api/reference/envelopes/envelopes/create/">Envelopes::create</a>
     and
     <a target='_blank'
-       href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/EnvelopeViews/createRecipient">EnvelopeViews::createRecipient</a>.
+       href="https://developers.docusign.com/docs/esign-rest-api/reference/envelopes/envelopeviews/createrecipient/">EnvelopeViews::createRecipient</a>.
 </p>
 
 <h4 id="example014">14. <a href="eg014">Send an envelope with an order form and payment field</a></h4>
 <p>Anchor text
     (<a target='_blank'
-        href="https://support.docusign.com/en/guides/AutoPlace-New-DocuSign-Experience">AutoPlace</a>)
+        href="https://developers.docusign.com/docs/esign-rest-api/esign101/concepts/tabs/auto-place/">AutoPlace</a>)
     is used to position the fields in the documents.
 </p>
 <p>API method used:
-    <a target='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/Envelopes/create">Envelopes::create</a>.
+    <a target='_blank' href="https://developers.docusign.com/docs/esign-rest-api/reference/envelopes/envelopes/create/">Envelopes::create</a>.
 </p>
 
 <h4 id="example015">15. <a href="eg015">Get the tab data from an envelope</a></h4>
 <p>This example retrieves the tab (field) values from an envelope.</p>
 <p>API method used:
     <a target='_blank'
-       href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/EnvelopeFormData/get">EnvelopeFormData::get</a>.
+       href="https://developers.docusign.com/docs/esign-rest-api/reference/envelopes/envelopeformdata/get/">EnvelopeFormData::get</a>.
 </p>
 
 <h4 id="example016">16. <a href="eg016">Set tab values for a envelope</a></h4>
 <p>This example sets the tab (field) values for an envelope including tabs that can and cannot be changed by the
     signer.</p>
 <p>API method used:
-    <a target='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/Envelopes/create">Envelopes::create</a>.
+    <a target='_blank' href="https://developers.docusign.com/docs/esign-rest-api/reference/envelopes/envelopes/create/">Envelopes::create</a>.
 </p>
 
 <h4 id="example017">17. <a href="eg017">Set template tab values</a></h4>
 <p>This example sets the tab (field) values for a template being used by an envelope.</p>
 <p>API method used:
-    <a target='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/Envelopes/create">Envelopes::create</a>.
+    <a target='_blank' href="https://developers.docusign.com/docs/esign-rest-api/reference/envelopes/envelopes/create/">Envelopes::create</a>.
 </p>
 
 <h4 id="example018">18. <a href="eg018">List envelope custom metadata field values</a></h4>
 <p>This example lists the envelope's custom metadata field values.</p>
 <p>API method used:
     <a target='_blank'
-       href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/EnvelopeCustomFields/list">EnvelopeCustomFields::list</a>.
+       href="https://developers.docusign.com/docs/esign-rest-api/reference/envelopes/envelopecustomfields/list/">EnvelopeCustomFields::list</a>.
 </p>
 
 <h4 id="example019">19. <a href="eg019">Access Code Authentication</a></h4>
 <p>This is an example of an envelope utilizing Access Code authentication for multi-factor verification of a
     recipient.</p>
 <p>API method used:
-    <a target='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/Envelopes/create">Envelopes::create</a>.
+    <a target='_blank' href="https://developers.docusign.com/docs/esign-rest-api/reference/envelopes/envelopes/create/">Envelopes::create</a>.
 </p>
 
 <h4 id="example020">20. <a href="eg020">SMS Authentication</a></h4>
 <p>This is an example of an envelope utilizing SMS authentication for multi-factor verification of a recipient.</p>
 <p>API method used:
-    <a target='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/Envelopes/create">Envelopes::create</a>.
+    <a target='_blank' href="https://developers.docusign.com/docs/esign-rest-api/reference/envelopes/envelopes/create/">Envelopes::create</a>.
 </p>
 
 <h4 id="example021">21. <a href="eg021">Phone Authentication</a></h4>
 <p>This is an example of an envelope utilizing phone authentication for multi-factor verification of a
     recipient.</p>
 <p>API method used:
-    <a target='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/Envelopes/create">Envelopes::create</a>.
+    <a target='_blank' href="https://developers.docusign.com/docs/esign-rest-api/reference/envelopes/envelopes/create/">Envelopes::create</a>.
 </p>
 
 <h4 id="example022">22. <a href="eg022">KBA Authentication</a></h4>
 <p>This is an example of an envelope utilizing Knowledge based authentication for multi-factor verification of a
     recipient.</p>
 <p>API method used:
-    <a target='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/Envelopes/create">Envelopes::create</a>.
+    <a target='_blank' href="https://developers.docusign.com/docs/esign-rest-api/reference/envelopes/envelopes/create/">Envelopes::create</a>.
 </p>
 
 <h4 id="example023">23. <a href="eg023">IDV Authentication</a></h4>
@@ -200,27 +200,27 @@
 <p>API methods used:
     <a target='_blank'
        href="https://developers.docusign.com/esign-rest-api/reference/Accounts/IdentityVerifications/list">Accounts::getAccountIdentityVerificationsList</a>.
-    <a target='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/Envelopes/create">Envelopes::create</a>.
+    <a target='_blank' href="https://developers.docusign.com/docs/esign-rest-api/reference/envelopes/envelopes/create/">Envelopes::create</a>.
 </p>
 
 <h4 id="example024">24. <a href="eg024">Creating a permission</a></h4>
 <p>This code example demonstrates how to create a permission profile with the eSignature REST API. </p>
 <p>API methods used:
     <a target='_blank'
-       href="https://developers.docusign.com/esign-rest-api/reference/Accounts/AccountPermissionProfiles/create">AccountPermissionProfiles::create</a>.
+       href="https://developers.docusign.com/docs/esign-rest-api/reference/accounts/accountpermissionprofiles/create/">AccountPermissionProfiles::create</a>.
 </p>
 
 <h4 id="example025">25. <a href="eg025">Setting a permission profile</a></h4>
 <p>This code example demonstrates how to set a permission profile with the eSignature REST API. </p>
 <p>API methods used:
-    <a target="_blank" href="https://developers.docusign.com/esign-rest-api/reference/UserGroups/Groups/update">Groups::update</a>.
+    <a target="_blank" href="https://developers.docusign.com/docs/esign-rest-api/reference/usergroups/groups/update/">Groups::update</a>.
 </p>
 
 <h4 id="example026">26. <a href="eg026">Updates the permission profile.</a></h4>
 <p>This code example demonstrates how to update a permission profile with the eSignature REST API. </p>
 <p>API method used:
     <a target='_blank'
-       href="https://developers.docusign.com/esign-rest-api/reference/Accounts/AccountPermissionProfiles/update">AccountPermissionProfiles::update</a>.
+       href="https://developers.docusign.com/docs/esign-rest-api/reference/accounts/accountpermissionprofiles/update/">AccountPermissionProfiles::update</a>.
 </p>
 
 <h4 id="example027">27. <a href="eg027">Deleting a permission</a></h4>
@@ -234,19 +234,19 @@
 <p>This code example demonstrates how to create a brand with the eSignature REST API. </p>
 <p>API methods used:
     <a target='_blank'
-       href="https://developers.docusign.com/esign-rest-api/reference/Accounts/AccountBrands/create">AccountBrands::create</a>.
+       href="https://developers.docusign.com/docs/esign-rest-api/reference/accounts/accountbrands/create/">AccountBrands::create</a>.
 </p>
 
 <h4 id="example029">29. <a href="eg029">Applying a brand to an envelope</a></h4>
 <p>This code example demonstrates how to apply a brand to an envelope with the eSignature REST API.</p>
 <p>API methods used:
-    <a target='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/Envelopes/create">Envelopes::create</a>
+    <a target='_blank' href="https://developers.docusign.com/docs/esign-rest-api/reference/envelopes/envelopes/create/">Envelopes::create</a>
 </p>
 
 <h4 id="example030">30. <a href="eg030">Applying a brand to a template</a></h4>
 <p>This code example demonstrates how to apply a brand to a template with the eSignature REST API. </p>
 <p>API methods used:
-    <a target='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/Envelopes/create">Envelopes::create</a>.
+    <a target='_blank' href="https://developers.docusign.com/docs/esign-rest-api/reference/envelopes/envelopes/create/">Envelopes::create</a>.
 </p>
 
 <h4 id="example031">31. <a href="eg031">Bulk sending envelopes to multiple recipients.</a></h4>
@@ -257,8 +257,8 @@
 <p>
     API methods used:
     <a target="_blank"
-       href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/EnvelopeRecipients/create">EnvelopeRecipients::create</a>,
-    <a target="_blank" href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/Envelopes/create">Envelopes::create</a>,
+       href="https://developers.docusign.com/docs/esign-rest-api/reference/envelopes/enveloperecipients/create/">EnvelopeRecipients::create</a>,
+    <a target="_blank" href="https://developers.docusign.com/docs/esign-rest-api/reference/envelopes/envelopes/create/">Envelopes::create</a>,
     <a target="_blank"
        href="https://developers.docusign.com/esign-rest-api/reference/BulkEnvelopes/BulkEnvelopes/get">BulkEnvelopes::get</a>,
     <a target="_blank"
@@ -266,7 +266,7 @@
     <a target="_blank"
        href="https://developers.docusign.com/esign-rest-api/reference/BulkEnvelopes/BulkSend/createBulkSendList">BulkSend::createBulkSendList</a>
     <a target="_blank"
-       href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/EnvelopeRecipients/create">EnvelopeRecipients::create</a>.
+       href="https://developers.docusign.com/docs/esign-rest-api/reference/envelopes/enveloperecipients/create/">EnvelopeRecipients::create</a>.
 </p>
 
 <h4 id="example032">32. <a href="eg032">Pausing a signature workflow</a></h4>
@@ -275,7 +275,7 @@
 </p>
 <p>
     API methods used:
-    <a target="_blank" href="https://developers.docusign.com/esign-rest-api/reference/envelopes/envelopes/create">Envelopes::create</a>
+    <a target="_blank" href="https://developers.docusign.com/docs/esign-rest-api/reference/envelopes/envelopes/create/">Envelopes::create</a>
 </p>
 
 <h4 id="example033">33. <a href="eg033">Resuming a signature workflow</a></h4>
@@ -284,7 +284,7 @@
 </p>
 <p>
     API methods used:
-    <a target="_blank" href="https://developers.docusign.com/esign-rest-api/reference/envelopes/envelopes/update">Envelopes::update</a>
+    <a target="_blank" href="https://developers.docusign.com/docs/esign-rest-api/reference/envelopes/envelopes/update/">Envelopes::update</a>
 </p>
 
 <h4 id="example034">34. <a href="eg034">Using conditional recipients</a></h4>
@@ -293,7 +293,7 @@
 </p>
 <p>
     API methods used:
-    <a target="_blank" href="https://developers.docusign.com/esign-rest-api/reference/envelopes/envelopes/create">Envelopes::create</a>
+    <a target="_blank" href="https://developers.docusign.com/docs/esign-rest-api/reference/envelopes/envelopes/create/">Envelopes::create</a>
 </p>
 <h2>Premium Features</h2>
 <h4 id="example035">35. <a href="eg035">Sending via SMS delivery</a></h4>
@@ -302,5 +302,5 @@
 </p>
 <p>
     API methods used:
-    <a target="_blank" href="https://developers.docusign.com/esign-rest-api/reference/envelopes/envelopes/create">Envelopes::create</a>
+    <a target="_blank" href="https://developers.docusign.com/docs/esign-rest-api/reference/envelopes/envelopes/create/">Envelopes::create</a>
 </p>
