Added admin api examples (#32)
Add Admin API examples

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -18,7 +18,7 @@
     <% } else { %>
       <h1 class="display-4">Node Launcher</h1>
       <p class="Xlead">
-        Welcome to the DocuSign Node examples using multiple OAuth flows (JWT and Authorization Code Grant).
+        Run and explore DocuSign Admin API code examples with Authorization Code Grant or JWT Grant authentication
     </p>
     <% } %>
 
@@ -45,7 +45,7 @@
       </li>
       <li class="nav-item">
         <a class="nav-link" id="pills-profile-tab" data-toggle="pill" href="#pills-profile" role="tab"
-           aria-controls="pills-profile" aria-selected="false">Launchers for C#, PHP, Node.js, Java, Curl, and more</a>
+           aria-controls="pills-profile" aria-selected="false">Launchers for Bash, C#, Java, Node.js, PHP, PowerShell, Python, and Ruby</a>
       </li>
     </ul>
     <div class="tab-content" id="pills-tabContent">
