--- a/views/pages/admin-examples/eg002CreateCLMESignUser.ejs
+++ b/views/pages/admin-examples/eg002CreateCLMESignUser.ejs
@@ -6,10 +6,13 @@
 <% include ../../partials/docBody %>
 
 <p>
-    API methods used:
-        <a target='_blank' href="https://developers.docusign.com/docs/admin-api/reference/productpermissionprofiles/productpermissionprofiles/getproductpermissionprofiles/">ProductPermissionProfiles::getProductPermissionProfiles</a>,
-        <a target='_blank' href="https://developers.docusign.com/docs/admin-api/reference/dsgroups/dsgroups/getdsgroups/">DsGroups::getDSGroups</a>, 
-        <a target='_blank' href="https://developers.docusign.com/docs/admin-api/reference/usermanagement/multiproductusermanagement/addorupdateuser/">MultiProductUserManagement::addOrUpdateUser</a>.
+  API methods used:
+  <a target='_blank' rel='noopener noreferrer'
+    href="https://developers.docusign.com/docs/admin-api/reference/usermanagement/multiproductusermanagement/getproductpermissionprofiles/">MultiProductUserManagement:getProductPermissionProfiles</a>,
+  <a target='_blank' rel='noopener noreferrer'
+    href="https://developers.docusign.com/docs/admin-api/reference/usermanagement/multiproductusermanagement/getdsgroups/">MultiProductUserManagement:getDsGroups</a>,
+  <a target='_blank' rel='noopener noreferrer'
+    href="https://developers.docusign.com/docs/admin-api/reference/usermanagement/multiproductusermanagement/addorupdateuser/">MultiProductUserManagement:addOrUpdateUser</a>.
 </p>
 
 <% include ../../partials/gitSource %>
