--- a/views/pages/admin-examples/eg003BulkExportUserData.ejs
+++ b/views/pages/admin-examples/eg003BulkExportUserData.ejs
@@ -8,9 +8,11 @@
 <% include ../../partials/docBody %>
 
 <p>
-    API methods used:
-    <a target='_blank' href="https://developers.docusign.com/docs/admin-api/reference/bulkoperations/userexport/createuserlistexport/">UserExport::createUserListExport</a> and
-    <a target='_blank' href="https://developers.docusign.com/docs/admin-api/reference/bulkoperations/userexport/getuserlistexport/">UserExport::getUserListExport</a>.
+  API methods used:
+  <a target='_blank' rel='noopener noreferrer'
+    href="https://developers.docusign.com/docs/admin-api/reference/bulkoperations/userexport/createuserlistexport/">UserExport:createUserListExport</a>,
+  <a target='_blank' rel='noopener noreferrer'
+    href="https://developers.docusign.com/docs/admin-api/reference/bulkoperations/userexport/getuserlistexport/">UserExport:getUserListExport</a>.
 </p>
 
 <% include ../../partials/gitSource %>
