--- a/views/pages/admin-examples/eg004ImportUser.ejs
+++ b/views/pages/admin-examples/eg004ImportUser.ejs
@@ -8,8 +8,11 @@
 <% include ../../partials/docBody %>
 
 <p>
-    API method used:
-    <a target='_blank' href="https://developers.docusign.com/docs/admin-api/reference/bulkoperations/userimport/addbulkuserimport/">UserImport:addBulkUserImport</a>.
+  API methods used:
+  <a target='_blank' rel='noopener noreferrer'
+    href="https://developers.docusign.com/docs/admin-api/reference/bulkoperations/userimport/addbulkuserimport/">UserImport:addBulkUserImport</a>,
+  <a target='_blank' rel='noopener noreferrer'
+    href='https://developers.docusign.com/docs/admin-api/reference/bulkoperations/userimport/getbulkuserimportrequest/'>UserImport:getBulkUserImportRequest</a>.
 </p>
 
 <% include ../../partials/gitSource %>
