--- a/views/pages/admin-examples/eg005AuditUsers.ejs
+++ b/views/pages/admin-examples/eg005AuditUsers.ejs
@@ -8,8 +8,10 @@
 <% include ../../partials/docBody %>
 
 <p>API methods used:
-  <a target='_blank' href="https://developers.docusign.com/docs/admin-api/reference/users/users/getusers/">Users::getUsers</a> and
-  <a target='_blank' href="https://developers.docusign.com/docs/admin-api/reference/users/users/getuserprofiles/">Users::getUserProfiles</a>.
+  <a target="_blank" rel="noopener noreferrer"
+    href="https://developers.docusign.com/docs/admin-api/reference/usermanagement/users/getusers/">Users:getUsers</a>,
+  <a target="_blank" rel="noopener noreferrer"
+    href="https://developers.docusign.com/docs/admin-api/reference/usermanagement/esignusermanagement/getuserprofiles/">eSignUserManagement:getUserProfiles</a>.
 </p>
 
 <% include ../../partials/gitSource %>
