--- a/views/pages/example_done.ejs
+++ b/views/pages/example_done.ejs
@@ -9,6 +9,10 @@
   <p><pre class="json-display"><code id="json-display"></code></pre></p>
 <% } %>
 
+<% if (locals.checkStatus) { %>
+  <p><a href="eg004status">Check the request status</a></p>
+<% } %>
+
 <p><a href="/">Continue</a></p>
-  
+
 <% include ../partials/genericFoot %>
