--- a/views/pages/index_admin_examples.ejs
+++ b/views/pages/index_admin_examples.ejs
@@ -18,10 +18,13 @@
         Demonstrates how to create a new eSignature user and activate their account automatically.
     </p>
     <p>
-        API methods used:
-        <a target='_blank' href="https://developers.docusign.com/docs/esign-rest-api/reference/accounts/accountpermissionprofiles/list/">AccountPermissionProfiles::list</a>,
-        <a target='_blank' href="https://developers.docusign.com/docs/esign-rest-api/reference/usergroups/groups/list/">Groups::list</a>,
-        <a target='_blank' href="https://developers.docusign.com/docs/admin-api/reference/users/users/createuser/">Users::createUser</a>
+      API methods used:
+      <a target='_blank' rel='noopener noreferrer'
+        href='https://developers.docusign.com/docs/esign-rest-api/reference/accounts/accountpermissionprofiles/list/'>AccountPermissionProfiles:list</a>,
+      <a target='_blank' rel='noopener noreferrer'
+        href='https://developers.docusign.com/docs/esign-rest-api/reference/usergroups/groups/list/'>Groups:list</a>,
+      <a target='_blank' rel='noopener noreferrer'
+        href="https://developers.docusign.com/docs/admin-api/reference/usermanagement/esignusermanagement/createuser/">eSignUserManagement:createUser</a>
     </p>
 
     <h4 id="example002">2. <a href="eg002">Create a new active user for CLM and eSignature</a></h4>
@@ -29,10 +32,13 @@
         Demonstrates how to create a new DocuSign user (valid for both CLM and eSignature) and activate their account automatically.
     </p>
     <p>
-        API methods used:
-        <a target='_blank' href="https://developers.docusign.com/docs/admin-api/reference/productpermissionprofiles/productpermissionprofiles/getproductpermissionprofiles/">ProductPermissionProfiles::getProductPermissionProfiles</a>,
-        <a target='_blank' href="https://developers.docusign.com/docs/admin-api/reference/dsgroups/dsgroups/getdsgroups/">DsGroups::getDSGroups</a>,
-        <a target='_blank' href="">Users::addOrUpdateUser</a>
+      API methods used:
+      <a target='_blank' rel='noopener noreferrer'
+        href="https://developers.docusign.com/docs/admin-api/reference/usermanagement/multiproductusermanagement/getproductpermissionprofiles/">MultiProductUserManagement:getProductPermissionProfiles</a>,
+      <a target='_blank' rel='noopener noreferrer'
+        href="https://developers.docusign.com/docs/admin-api/reference/usermanagement/multiproductusermanagement/getdsgroups/">MultiProductUserManagement:getDsGroups</a>,
+      <a target='_blank' rel='noopener noreferrer'
+        href="https://developers.docusign.com/docs/admin-api/reference/usermanagement/multiproductusermanagement/addorupdateuser/">MultiProductUserManagement:addOrUpdateUser</a>
     </p>
 
     <h4 id="example003">3. <a href="eg003">Bulk export user data</a></h4>
@@ -40,9 +46,11 @@
         Demonstrates how to bulk export user accounts within an organization into a CSV (comma-separated value) file.
     </p>
     <p>
-        API methods used:
-        <a target='_blank' href="https://developers.docusign.com/docs/admin-api/reference/bulkoperations/userexport/createuserlistexport/">UserExport::createUserListExport</a>,
-        <a target='_blank' href="https://developers.docusign.com/docs/admin-api/reference/bulkoperations/userexport/getuserlistexport/">UserExport::getUserListExport</a>
+      API methods used:
+      <a target='_blank' rel='noopener noreferrer'
+        href="https://developers.docusign.com/docs/admin-api/reference/bulkoperations/userexport/createuserlistexport/">UserExport:createUserListExport</a>,
+      <a target='_blank' rel='noopener noreferrer'
+        href="https://developers.docusign.com/docs/admin-api/reference/bulkoperations/userexport/getuserlistexport/">UserExport:getUserListExport</a>
     </p>
 
     <h4 id="example004">4. <a href="eg004">Add users via bulk import</a></h4>
@@ -50,19 +58,24 @@
         Demonstrates how to bulk-import users and add user data from an example CSV (comma-separated value) file into a DocuSign Admin organization.
     </p>
     <p>
-        API method used:
-        <a target='_blank' href="https://developers.docusign.com/docs/admin-api/reference/bulkoperations/userimport/addbulkuserimport/">UserImport:addBulkUserImport</a>
-    </p>
+      API methods used:
+      <a target='_blank' rel='noopener noreferrer'
+        href="https://developers.docusign.com/docs/admin-api/reference/bulkoperations/userimport/addbulkuserimport/">UserImport:addBulkUserImport</a>,
+      <a target='_blank' rel='noopener noreferrer'
+        href='https://developers.docusign.com/docs/admin-api/reference/bulkoperations/userimport/getbulkuserimportrequest/'>UserImport:getBulkUserImportRequest</a>
+</p>
 
     <h4 id="example005">5. <a href="eg005">Audit users</a></h4>
     <p>
         Demonstrates how to audit the users in your account by retrieving the profiles of users that were modified after a specified date.
     </p>
     <p>
-        API methods used:
-        <a target='_blank' href="https://developers.docusign.com/docs/admin-api/reference/users/users/getusers/">Users::getUsers</a>,
-        <a target='_blank' href="https://developers.docusign.com/docs/admin-api/reference/users/users/getuserprofiles/">Users::getUserProfiles</a>
-    </p>
+      API methods used:
+      <a target="_blank" rel="noopener noreferrer"
+        href="https://developers.docusign.com/docs/admin-api/reference/usermanagement/users/getusers/">Users:getUsers</a>,
+      <a target="_blank" rel="noopener noreferrer"
+        href="https://developers.docusign.com/docs/admin-api/reference/usermanagement/esignusermanagement/getuserprofiles/">eSignUserManagement:getUserProfiles</a>
+   </p>
 
 </div>
 
