combining phone auth and cleaning up old examples

--- a/views/pages/index_esignature_examples.ejs
+++ b/views/pages/index_esignature_examples.ejs
@@ -175,15 +175,8 @@
     <a target='_blank' href="https://developers.docusign.com/docs/esign-rest-api/reference/envelopes/envelopes/create/">Envelopes::create</a>.
 </p>
 
-<h4 id="example020">20. <a href="eg020">SMS Authentication</a></h4>
-<p>This is an example of an envelope utilizing SMS authentication for multi-factor verification of a recipient.</p>
-<p>API method used:
-    <a target='_blank' href="https://developers.docusign.com/docs/esign-rest-api/reference/envelopes/envelopes/create/">Envelopes::create</a>.
-</p>
-
-<h4 id="example021">21. <a href="eg021">Phone Authentication</a></h4>
-<p>This is an example of an envelope utilizing phone authentication for multi-factor verification of a
-    recipient.</p>
+<h4 id="example020">20. <a href="eg020">Phone Recipient Authentication</a></h4>
+<p>This is an example of creating and sending an envelope (a signing request) using an SMS message or phone call for Recipient Authentication.</p>
 <p>API method used:
     <a target='_blank' href="https://developers.docusign.com/docs/esign-rest-api/reference/envelopes/envelopes/create/">Envelopes::create</a>.
 </p>
