--- a/views/pages/examples/eg020PhoneAuthentication.ejs
+++ b/views/pages/examples/eg020PhoneAuthentication.ejs
@@ -1,27 +1,37 @@
 <% include ../../partials/examplesHead %>
 
-<h4>20. Send an envelope with recipient SMS authentication.</h4>
-<p>Anchor text 
-  (<a href="https://developers.docusign.com/docs/esign-rest-api/esign101/concepts/tabs/auto-place/">AutoPlace</a>)
-  is used to position the signing fields in the documents.
+<h4>20. Requiring an Phone Authentication for a Recipient</h4>
+<p>
+    The envelope includes a pdf document. Anchor text
+    (<a href="https://developers.docusign.com/docs/esign-rest-api/esign101/concepts/tabs/auto-place/">AutoPlace</a>)
+    is used to position the signing fields in the documents.
 </p>
-<p>This is an example of an envelope utilizing SMS authentication for multi-factor verification of a recipient.</p>
+<p>
+    This is a general example of creating and sending an envelope (a signing request) using a phone call for Recipient Authentication.
+</p>
+
 
 <% include ../../partials/docBody %>
-  
-  <p>API method used: 
-   <a target='_blank' href="https://developers.docusign.com/docs/esign-rest-api/reference/envelopes/envelopes/create/">Envelopes::create</a>.
+
+<p>
+  API method used:
+  <a target='_blank' href="https://developers.docusign.com/docs/esign-rest-api/reference/envelopes/envelopes/create/">Envelopes::create</a>.
 </p>
 
 
 <% include ../../partials/gitSource %>
 <form class="eg" action="" method="post" data-busy="form">
   <div class="form-group">
-    <label for="phoneNumber">SMS Number</label>
+    <label for="countryCode">Country Code</label>
+    <input type="text" class="form-control" id="countryCode" placeholder="1" name="countryCode"
+           value="1" required>
+  </div>
+  <div class="form-group">
+    <label for="phoneNumber">Phone Number</label>
     <input type="text" class="form-control" id="phoneNumber" placeholder="415-555-1212" name="phoneNumber"
            value="415-555-1212" required>
   </div>
-    <div class="form-group">
+  <div class="form-group">
       <label for="signerEmail">Signer Email</label>
       <input type="email" class="form-control" id="signerEmail" name="signerEmail"
              aria-describedby="emailHelp" placeholder="pat@example.com" required
@@ -36,5 +46,5 @@
     <input type="hidden" name="_csrf" value="<%- csrfToken %>">
     <button type="submit" class="btn btn-docu">Submit</button>
 </form>
-  
+
 <% include ../../partials/examplesFoot %>
