--- a/views/pages/examples/eg020PhoneAuthentication.ejs
+++ b/views/pages/examples/eg020PhoneAuthentication.ejs
@@ -1,13 +1,13 @@
 <% include ../../partials/examplesHead %>
 
-<h4>20. Requiring an Phone Authentication for a Recipient</h4>
+<h4>20. Requiring Phone Authentication for a Recipient</h4>
 <p>
     The envelope includes a pdf document. Anchor text
     (<a href="https://developers.docusign.com/docs/esign-rest-api/esign101/concepts/tabs/auto-place/">AutoPlace</a>)
     is used to position the signing fields in the documents.
 </p>
 <p>
-    This is a general example of creating and sending an envelope (a signing request) using a phone call for Recipient Authentication.
+  This is a general example of creating and sending an envelope (a signing request) using an SMS message or phone call for Recipient Authentication.
 </p>
 
 
