--- a/views/pages/examples/eg020PhoneAuthentication.ejs
+++ b/views/pages/examples/eg020PhoneAuthentication.ejs
@@ -1,13 +1,13 @@
 <% include ../../partials/examplesHead %>
 
-<h4>20. Requiring Phone Authentication for a Recipient</h4>
+<h4>20. Require Phone Authentication for a Recipient</h4>
 <p>
     The envelope includes a pdf document. Anchor text
     (<a href="https://developers.docusign.com/docs/esign-rest-api/esign101/concepts/tabs/auto-place/">AutoPlace</a>)
     is used to position the signing fields in the documents.
 </p>
 <p>
-  This is a general example of creating and sending an envelope (a signing request) using an SMS message or phone call for Recipient Authentication.
+  Sends an envelope that requires entering a six-digit code from a text message or phone call for the purpose of multifactor authentication.
 </p>
 
 
@@ -15,7 +15,7 @@
 
 <p>
   API method used:
-  <a target='_blank' href="https://developers.docusign.com/docs/esign-rest-api/reference/envelopes/envelopes/create/">Envelopes::create</a>.
+  <a target='_blank' href="https://developers.docusign.com/docs/esign-rest-api/reference/envelopes/envelopes/create/">Envelopes:create</a>
 </p>
 
 
