--- a/views/pages/index_esignature_examples.ejs
+++ b/views/pages/index_esignature_examples.ejs
@@ -175,10 +175,10 @@
     <a target='_blank' href="https://developers.docusign.com/docs/esign-rest-api/reference/envelopes/envelopes/create/">Envelopes::create</a>.
 </p>
 
-<h4 id="example020">20. <a href="eg020">Phone Recipient Authentication</a></h4>
-<p>This is an example of creating and sending an envelope (a signing request) using an SMS message or phone call for Recipient Authentication.</p>
+<h4 id="example020">20. <a href="eg020">Require Phone Authentication for a Recipient</a></h4>
+<p>Sends an envelope that requires entering a six-digit code from a text message or phone call for the purpose of multifactor authentication.</p>
 <p>API method used:
-    <a target='_blank' href="https://developers.docusign.com/docs/esign-rest-api/reference/envelopes/envelopes/create/">Envelopes::create</a>.
+    <a target='_blank' href="https://developers.docusign.com/docs/esign-rest-api/reference/envelopes/envelopes/create/">Envelopes:create</a>
 </p>
 
 <h4 id="example022">22. <a href="eg022">KBA Authentication</a></h4>
