--- a/views/pages/examples/eg020PhoneAuthentication.ejs
+++ b/views/pages/examples/eg020PhoneAuthentication.ejs
@@ -6,7 +6,7 @@
   Sends an envelope that requires entering a six-digit code from a text message or phone call for the purpose of multifactor authentication.
 </p>
 <p>
-    The envelope includes a pdf document. Anchor text
+    The envelope includes a PDF file. Anchor text
     (<a href="https://developers.docusign.com/docs/esign-rest-api/esign101/concepts/tabs/auto-place/">AutoPlace</a>)
     is used to position the signing fields in the documents.
 </p>
