--- a/views/pages/examples/eg020PhoneAuthentication.ejs
+++ b/views/pages/examples/eg020PhoneAuthentication.ejs
@@ -16,21 +16,21 @@
 
 <p>
   API method used:
-  <a target='_blank' href="https://developers.docusign.com/docs/esign-rest-api/reference/envelopes/envelopes/create/">Envelopes:create</a>
+  <a target='_blank' href="https://developers.docusign.com/docs/esign-rest-api/reference/envelopes/envelopes/create/">Envelopes:create</a>.
 </p>
 
 
 <% include ../../partials/gitSource %>
 <form class="eg" action="" method="post" data-busy="form">
   <div class="form-group">
-    <label for="countryCode">Country Code</label>
+    <label for="countryCode">Signer Country Code</label>
     <input type="text" class="form-control" id="countryCode" placeholder="1" name="countryCode"
-           value="1" required>
+           required>
   </div>
   <div class="form-group">
-    <label for="phoneNumber">Phone Number</label>
-    <input type="text" class="form-control" id="phoneNumber" placeholder="415-555-1212" name="phoneNumber"
-           value="415-555-1212" required>
+    <label for="phoneNumber">Signer Phone Number</label>
+    <input type="text" class="form-control" id="phoneNumber" placeholder="4155551212" name="phoneNumber"
+           required>
   </div>
   <div class="form-group">
       <label for="signerEmail">Signer Email</label>
