--- a/views/pages/index_esignature_examples.ejs
+++ b/views/pages/index_esignature_examples.ejs
@@ -1,6 +1,3 @@
-<h2>Welcome</h2>
-  <p>This launcher includes the following examples for the DocuSign eSignature REST API.</p>
-
 <% if (showDoc) { %>
     <p><a target='_blank' href='<%= documentation %>'>Documentation</a> on using OAuth Authorization Code Grant and
         JWT from a Node Express application.</p>
@@ -9,7 +6,7 @@
 <% if (locals.dsConfig.multiSourceChooser) { %>
     <h3 class="mt-4">Code Examples for C#, PHP, Java, Node.js, Python, and Curl</h3>
 <% } else { %>
-    <h3 class="mt-4">Code Examples</h3>
+    <h3 class="mt-4">eSignature REST API examples</h3>
 <% } %>
 
 <h4 id="example001">1. <a href="eg001">Use embedded signing</a></h4>
