change welcome message on banner

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -13,8 +13,7 @@
 
     <% if (locals.dsConfig.multiSourceChooser) { %>
       <h1 class="display-4">Welcome</h1>
-      <p class="Xlead">Welcome to the DocuSign code examples with
-        OAuth Authorization Code Grant and JWT.</p>
+      <p class="Xlead">Run and explore DocuSign code examples with Authorization Code Grant or JWT Grant authentication</p>
     <% } else { %>
       <h1 class="display-4">Node Launcher</h1>
       <% if (dsConfig.examplesApi.isAdminApi) { %>
@@ -23,7 +22,7 @@
         </p>
       <% } else { %>
         <p class="Xlead">
-          Welcome to the DocuSign Node examples using multiple OAuth flows (JWT and Authorization Code Grant).
+          Run and explore eSignature REST API code examples with Authorization Code Grant or JWT Grant authentication
         </p>
       <% } %>
     <% } %>
