API dropdown (manual restart solution) (#45)
* Updating large refactoring of the Node.js code examples without removing the old files yet.

* update step comments

* first working version

* changes so user restarts app

* removing dependency

* adding more instructions for restarting app

Co-authored-by: Inbar Gazit <inbar.gazit@docusign.com>
Co-authored-by: Karissa Jacobsen <karissa.jacobsen@docusign.com>
Co-authored-by: meihDS <70775251+meihDS@users.noreply.github.com>

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -16,7 +16,7 @@
       <p class="Xlead">Run and explore DocuSign code examples with Authorization Code Grant or JWT Grant authentication</p>
     <% } else { %>
       <h1 class="display-4">Node Launcher</h1>
-      <% if (dsConfig.examplesApi.isAdminApi) { %>
+      <% if (examplesApi.examplesApi.isAdminApi) { %>
         <p class="Xlead">
           Run and explore DocuSign Admin API code examples with Authorization Code Grant or JWT Grant authentication
         </p>
