--- a/views/pages/index_examples.ejs
+++ b/views/pages/index_examples.ejs
@@ -1,10 +1,10 @@
-<% if(locals.dsConfig.examplesApi.isRoomsApi) { %>
+<% if(locals.examplesApi.examplesApi.isRoomsApi) { %>
     <% include index_rooms_examples %>
-<% } else if(locals.dsConfig.examplesApi.isClickApi) { %>
+<% } else if(locals.examplesApi.examplesApi.isClickApi) { %>
     <% include index_click_examples %>
-<% } else if(locals.dsConfig.examplesApi.isMonitorApi) { %>
+<% } else if(locals.examplesApi.examplesApi.isMonitorApi) { %>
     <% include index_monitor_examples %>
-<% } else if(locals.dsConfig.examplesApi.isAdminApi) { %>
+<% } else if(locals.examplesApi.examplesApi.isAdminApi) { %>
     <% include index_admin_examples %>
 <% } else { %>
     <% include index_esignature_examples %>
