--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -41,6 +41,10 @@
                  data-busy="href">Login <span class="sr-only">(current)</span></a>
             </li>
           <% }  %>
+          <li>
+            <a class="nav-link" href="/ds/choose_api" id="choose_api"
+               data-busy="href">Choose API <span class="sr-only">(current)</span></a>
+          </li>
         </ul>
 
         <% if (locals.user) { %>
