WorkflowID fix for Phone Auth and IDV.

--- a/views/pages/error.ejs
+++ b/views/pages/error.ejs
@@ -6,6 +6,9 @@
 
 <% if (errorCode) { %>
   <p><%= errorCode %>: <%= errorMessage %></p>
+  <% if (typeof errorInfo !== 'undefined') { %>
+    <p><%- errorInfo %></p>
+  <% } %>
 <% } else { %>
   <p><pre><%= err %></pre></p>
 
