Made some text edits, also edited the banner so it displays correctly depending on the API being used.

--- a/views/pages/click-examples/eg002ActivateClickwrap.ejs
+++ b/views/pages/click-examples/eg002ActivateClickwrap.ejs
@@ -1,11 +1,9 @@
 <% include ../../partials/examplesHead %>
 
-<h4>2. Activating a clickwrap</h4>API 
-<p>API 
-    This example demonstrates how to use the Click API to activate a new
-    clickwrap that you have already created.<br/> By default, new
-    clickwraps are inactive. You must activate your clickwrap before
-    you can use it.
+<h4>2. Activate a clickwrap</h4>
+<p>Activates a new clickwrap that you have already created. 
+    By default, new clickwraps are inactive. <br> You must activate 
+    your clickwrap before you can use it.
 </p>
 
 <% include ../../partials/docBody %>
