--- a/views/pages/index_click_examples.ejs
+++ b/views/pages/index_click_examples.ejs
@@ -15,8 +15,7 @@
 
 <h4 id="example001">1. <a href="eg001">Creating a clickwrap</a></h4>
 <p>
-    This example demonstrates how to use the Click API to create a
-    clickwrap that you can embed in your website or app.
+    Creates a clickwrap that you can embed in your website or app.
 </p>
 <p>
     API method used:
@@ -24,10 +23,9 @@
        href="https://developers.docusign.com/docs/click-api/reference/accounts/clickwraps/createclickwrap/">ClickWraps::createClickwrap</a>
 </p>
 
-<h4 id="example002">2. <a href="eg002">Activating a clickwrap</a></h4>
+<h4 id="example002">2. <a href="eg002">Activate a clickwrap</a></h4>
 <p>
-    This example demonstrates how to use the Click API to activate a
-    new clickwrap that you have already created.
+    Activates a new clickwrap that you have already created.
 </p>
 <p>
     API method used:
@@ -36,8 +34,7 @@
 </p>
 
 <h4 id="example003">3. <a href="eg003">Creating a new clickwrap version</a></h4>
-<p>This example demonstrates how to use the Click API to
-    create a new version of a clickwrap.</p>
+<p>Creates a new version of a clickwrap.</p>
 <p>
     API method used:
     <a target='_blank'
@@ -46,8 +43,7 @@
 
 <h4 id="example004">4. <a href="eg004">Getting a list of clickwraps</a></h4>
 <p>
-    This example demonstrates how to use the Click API to get a list of
-    clickwraps associated with a specific DocuSign user.</p>
+    Gets a list of clickwraps associated with a specific DocuSign user.</p>
 <p>
     API method used:
     <a target='_blank'
@@ -56,8 +52,7 @@
 
 <h4 id="example005">5. <a href="eg005">Getting clickwrap responses</a></h4>
 <p>
-    This example demonstrates how to use the Click API to get user
-    responses to your clickwrap agreements.</p>
+    Gets user responses to your clickwrap agreements.</p>
 <p>
     API method used:
     <a target='_blank'
