--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -20,6 +20,18 @@
         <p class="Xlead">
           Run and explore DocuSign Admin API code examples with Authorization Code Grant or JWT Grant authentication
         </p>
+      <% } else if (examplesApi.examplesApi.isClickApi) { %>
+        <p class="Xlead">
+          Run and explore Click API code examples with Authorization Code Grant or JWT Grant authentication
+        </p>
+      <% } else if (examplesApi.examplesApi.isRoomsApi) { %>
+        <p class="Xlead">
+          Run and explore Rooms API code examples with Authorization Code Grant or JWT Grant authentication
+        </p>
+      <% } else if (examplesApi.examplesApi.isMonitorApi) { %>
+        <p class="Xlead">
+          Run and explore Monitor API code examples with Authorization Code Grant or JWT Grant authentication
+        </p>
       <% } else { %>
         <p class="Xlead">
           Run and explore eSignature REST API code examples with Authorization Code Grant or JWT Grant authentication
