Monitor JWT only in banner text

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -30,7 +30,7 @@
         </p>
       <% } else if (examplesApi.examplesApi.isMonitorApi) { %>
         <p class="Xlead">
-          Run and explore Monitor API code examples with Authorization Code Grant or JWT Grant authentication
+          Run and explore Monitor API code examples with JWT Grant authentication
         </p>
       <% } else { %>
         <p class="Xlead">
